--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo_mini.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>跑跑比赛小助手</title>
   </head>
   <body>
     <div id="root"></div>
