--- a/project/index.html
+++ b/project/index.html
@@ -10,7 +10,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-  <!-- <script>
+  <script>
   (function (win) {
     // 获取页面所有的 <script > 标签对象
     let scripts = document.getElementsByTagName('script')
@@ -39,5 +39,5 @@
       }
     }
   })(window)
-</script> -->
+</script>
 </html>
